# cse-380-project

./: .gitignore  .input.swp  INPUT  Makefile  Makefile.am  Makefile.in  README  bootstrap  config.h  config.h.in  config.status  configure  configure.ac  input  main.c  makefile  makefile.defs  makefile.in  makefile.tpl.in  run
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
dat/: convergence.eps  convergence.plt  errortest.plt  sample.plt  testode.eps  trajectory.eps  trajectory.plt
doc/: makefile
inc/: functions.h  parse.h  testode.h
src/: Makefile  Makefile.am  Makefile.in  functions.c  main.c  makefile  output.c  parse.c  run  testode.c
test/: main.c  makefile  tEulerFwd.c  testparse.c  testsolver.c  testsuite  testsuite.h
tpl/arc/grvy-0.32.0/: Makefile  Makefile.in  aclocal.m4  config.status  config_grvy.h  config_grvy.h.in  configure  grvy.pc  grvy.spec  libtool  stamp-h1
tpl/arc/grvy-0.32.0/doxygen/: Makefile  Makefile.in
tpl/arc/grvy-0.32.0/examples/: Makefile  Makefile.in  check_dir  check_dir.c  cpp-input  cpp-input.cpp  cpp-ocore.cpp  cpp-timer  cpp-timer.cpp  hdf5_access  hdf5_access.cpp  input  input.c  inputf  inputf.f90  messages  messages.c  ocore.c  ocore_f.f90  ocore_performance.cpp  pecos-input.txt  timer  timer.c  timerf  timerf.f90
tpl/arc/grvy-0.32.0/src/: .license.stamp  Makefile  Makefile.am  Makefile.in  fortran_string_order.h  gadd.cpp  gdump.cpp  grvy.f90  grvy.h  grvy.h.in  grvy.mod  grvy_classes.cpp  grvy_classes.lo  grvy_env.cpp  grvy_env.h  grvy_env.lo  grvy_hdf5.cpp  grvy_hdf5.lo  grvy_input.cpp  grvy_input.lo  grvy_input_interface.cpp  grvy_input_interface.lo  grvy_int.h  grvy_log.cpp  grvy_log.lo  grvy_math.cpp  grvy_math.lo  grvy_mpi.h  grvy_ptable.h  grvy_ramdisk.cpp  grvy_ramdisk.lo  grvy_ramdisk_interface.cpp  grvy_ramdisk_interface.lo  grvy_timer.cpp  grvy_timer.lo  grvy_timer_interface.cpp  grvy_timer_interface.lo  grvy_utils.cpp  grvy_utils.lo  grvy_version  (+7 more)
tpl/arc/grvy-0.32.0/test/: C++_hdf_hist_timing.cpp  C++_input-register.cpp  C++_input.cpp  C++_input_dump.cpp  C++_ocore.cpp  (+61 more)
(+53 files in other folders)
